# utility

./: README.md
cppclient/: .gitignore  .space.kts  BUILD.external  CMakeLists.txt  README.md  WORKSPACE  build.sh  structure.md  testBuild.sh
cppclient/API/: BUILD  CMakeLists.txt  build.bat  build.sh  rebuild.sh
cppclient/API/doc/: mainpage.dox
cppclient/API/doc/puml/: Transport.puml
cppclient/API/include/Communicator/: BasicCoders.hpp  Coder.hpp  Communicator.hpp  Contractor.hpp  Endpoint.hpp  Helper.hpp  LibraryFunction.hpp  RemoteFunction.hpp  Transport.hpp  TransportServer.hpp
cppclient/API/include/Communicator/BasicBinaryCoders/: EndpointCoder.hpp  FloatingPointCoder.hpp  IntCoder.hpp  RemoteFunctionCoder.hpp  StringCoder.hpp  TupleCoder.hpp  VectorCoder.hpp
cppclient/API/include/Communicator/ZMQTransport/: TransportServerReply.hpp  ZMQContext.hpp  ZMQFrozenTransportServer.hpp  ZMQTMWorker.hpp  ZMQTransport.hpp  ZMQTransportManager.hpp
cppclient/API/source/: Communicator.cpp  Endpoint.cpp  Identities.cpp  ZMQTMWorker.cpp  ZMQTransportManager.cpp
cppclient/Example/: BUILD  CMakeLists.txt
cppclient/Example/client/: CMakeLists.txt
cppclient/Example/client/source/: main.cpp
cppclient/Example/server/: CMakeLists.txt
cppclient/Example/server/source/: main.cpp
cppclient/Test/: BUILD  CMakeLists.txt  rebuild.bat
cppclient/Test/include/: remote_function.hpp  test_main.hpp  userapi_tests.hpp
cppclient/Test/source/: coder_tests.cpp  test_main.cpp  userapi_tests.cpp  utility_tests.cpp  zmqtransport.cpp
cppclient/cmake/: CompilerWarnings.cmake  Conan.cmake
